# PINNs

./: 1-Diffusion_PDE_trained.pth  1D_Diffusion_Equation.ipynb  README.md
1D-Diffusion_Equation/: 1D_Diffusion_Equation.ipynb
1D-Diffusion_Equation/C++/neural/: CMakeLists.txt  Diffusion_PDE.pt  main.cpp
1D-Diffusion_Equation_C++/neural/: .cnake.swp
2D-Diffusion_Equation/: 2D-Diffusion_trained_PDE.pth  2_Diffusion_Equation.ipynb
2D-Diffusion_Equation/C++/DeployModel/: 2D-Diffusion_PDE.pt  CMakeLists.txt  main.cpp
